# mcp-soho-registry

./: .gitignore  README.md  plan.md  pyproject.toml
mcp_orchestrator/: __init__.py  cli.py  composer.py  generator.py  guardrails.py  matcher.py  topology.py
mcp_registry/: __init__.py  cli.py  config.py  db.py  extractor.py  models.py  scorer.py  scoring.py  scraper.py  tagger.py  vendors.py
tests/: conftest.py  test_composer.py  test_db.py  test_guardrails.py  test_scorer.py  test_scoring.py  test_tagger.py  test_topology.py  test_vendors.py
topology-examples/: home-lab.yaml  media-server.yaml  myrug-network.yaml  small-office.yaml
