[project]
name = "mcp-soho-registry"
version = "0.1.0"
description = "MCP Server Registry & Auto-Orchestrator for SOHO networks"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.scripts]
mcp-registry = "mcp_registry.cli:cli"
mcp-orchestrate = "mcp_orchestrator.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_registry", "mcp_orchestrator"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
